--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="checkout">Оформление заказа</string>
     <string name="tours">Туры</string>
     <string name="about_group">О группе</string>
+    <string name="concert">концерт в Сеуле 23.33.33</string>
 </resources>
